data/usersCode/ghdt/question2/error.txt
/home/rutuja/myenv/RC/data/usersCode/ghdt/question2/code2-0.c:1:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
 ghff
 ^~~~
